terratf/sg.tf
resource "aws_security_group" "my-sg"{

    name = "my-sg2"
    description = "allow all traffic"

    tags = {
        Name = "my-new-sg"
    }

ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
egress {
    from_port = 0
    to_port = 0 
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}


}
